GPF-1765 fix variant report pedigree modal flicker

--- a/gpfjs/src/app/pedigree-chart/pedigree-chart.component.css
+++ b/gpfjs/src/app/pedigree-chart/pedigree-chart.component.css
@@ -8,10 +8,20 @@ svg {
   margin: 0 auto;
 }
 
-.family-panel {
+#family-ids-list-wrapper {
+  height: 100px;
+}
+
+#family-ids-list {
   max-height: 100px;
+  height: 100px;
   overflow: auto;
   overflow-wrap: break-word;
+  padding: 0 8px 24px 8px;
+}
+
+#family-ids-list div {
+  text-align: center;
 }
 
 .btn-close {
